--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Commit changes
         run: |
           if [ $(git diff | wc -l) -gt 0 ]; then
-            git config --global user.name 'DavesCodeMusings'
-            git config --global user.email 'DavesCodeMusings@users.noreply.github.com'
+            git config --global user.name "$GITHUB_REPOSITORY_OWNER"
+            git config --global user.email "$GITHUB_REPOSITORY_OWNER@users.noreply.github.com"
             git commit -am "mpy_cross $SRC_FILE"
             git push
           fi
